--- a/ColeccionDeJuegos/Base.lproj/Main.storyboard
+++ b/ColeccionDeJuegos/Base.lproj/Main.storyboard
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="0tD-hR-1hT">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +14,121 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="ViewController" customModule="ColeccionDeJuegos" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="r0B-4W-YTV">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="r0B-4W-YTV" secondAttribute="bottom" id="K3n-pu-Vmc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="r0B-4W-YTV" secondAttribute="trailing" id="LTi-dp-x4k"/>
+                            <constraint firstItem="r0B-4W-YTV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lo1-Qk-2ao"/>
+                            <constraint firstItem="r0B-4W-YTV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="v0n-KS-adA"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="gFe-A3-Ov1">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="qcs-wJ-Lel">
+                            <connections>
+                                <segue destination="g4k-ZE-la7" kind="show" id="NBt-3E-BCa"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="r0B-4W-YTV" id="Xnm-mm-zno"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="476" y="131.78410794602701"/>
+        </scene>
+        <!--Juego View Controller-->
+        <scene sceneID="E15-UD-4LA">
+            <objects>
+                <viewController id="g4k-ZE-la7" customClass="JuegoViewController" customModule="ColeccionDeJuegos" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="aVv-eF-OZ1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="arA-FU-XhO">
+                                <rect key="frame" x="47" y="84" width="280" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="DD2-ol-Jit"/>
+                                    <constraint firstAttribute="width" constant="280" id="szO-hT-jg6"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vQm-o0-lIW">
+                                <rect key="frame" x="47.5" y="254" width="280" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WNo-fY-z8T">
+                                <rect key="frame" x="160.5" y="304" width="55" height="30"/>
+                                <state key="normal" title="Agregar"/>
+                                <connections>
+                                    <action selector="agregarTapped:" destination="g4k-ZE-la7" eventType="touchUpInside" id="ODA-vr-0wi"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="WNo-fY-z8T" firstAttribute="top" secondItem="vQm-o0-lIW" secondAttribute="bottom" constant="20" id="BZc-DU-OqR"/>
+                            <constraint firstItem="arA-FU-XhO" firstAttribute="top" secondItem="Ifx-sp-nMa" secondAttribute="top" constant="20" id="CfD-f3-l2v"/>
+                            <constraint firstItem="WNo-fY-z8T" firstAttribute="centerX" secondItem="aVv-eF-OZ1" secondAttribute="centerX" id="GI0-XM-qhg"/>
+                            <constraint firstItem="arA-FU-XhO" firstAttribute="centerX" secondItem="aVv-eF-OZ1" secondAttribute="centerX" id="Goe-Od-KRs"/>
+                            <constraint firstItem="vQm-o0-lIW" firstAttribute="top" secondItem="arA-FU-XhO" secondAttribute="bottom" constant="20" id="QSX-FP-nu6"/>
+                            <constraint firstItem="vQm-o0-lIW" firstAttribute="width" secondItem="arA-FU-XhO" secondAttribute="width" id="RLc-V8-5fm"/>
+                            <constraint firstItem="vQm-o0-lIW" firstAttribute="centerX" secondItem="aVv-eF-OZ1" secondAttribute="centerX" id="p19-ca-lBE"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Ifx-sp-nMa"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Mms-DP-GtE">
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="camera" id="bLV-SJ-vX8">
+                                <connections>
+                                    <action selector="camaraTapped:" destination="g4k-ZE-la7" id="T90-0X-vAN"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="Fotos" id="rWC-bI-2Hn">
+                                <connections>
+                                    <action selector="fotosTapped:" destination="g4k-ZE-la7" id="hff-sB-gND"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="JuegoImageView" destination="arA-FU-XhO" id="qG1-Gr-YeV"/>
+                        <outlet property="tituloTextField" destination="vQm-o0-lIW" id="Evs-yi-NE1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BcC-wV-dGJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1238" y="133"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="cvm-ly-TVz">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0tD-hR-1hT" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dqp-Jf-Fv5">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="yCy-nx-13c"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IOq-d0-y1Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-265" y="132"/>
         </scene>
     </scenes>
 </document>
