--- a/ColeccionDeJuegos/Base.lproj/Main.storyboard
+++ b/ColeccionDeJuegos/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                     <navigationItem key="navigationItem" id="gFe-A3-Ov1">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="qcs-wJ-Lel">
                             <connections>
-                                <segue destination="g4k-ZE-la7" kind="show" id="NBt-3E-BCa"/>
+                                <segue destination="g4k-ZE-la7" kind="show" identifier="juegoSegue" id="NBt-3E-BCa"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -76,6 +76,13 @@
                                     <action selector="agregarTapped:" destination="g4k-ZE-la7" eventType="touchUpInside" id="ODA-vr-0wi"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v12-Vy-bPq">
+                                <rect key="frame" x="160" y="349" width="55" height="30"/>
+                                <state key="normal" title="Eliminar"/>
+                                <connections>
+                                    <action selector="eliminarTapped:" destination="g4k-ZE-la7" eventType="touchUpInside" id="bXR-X0-dZa"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -85,7 +92,9 @@
                             <constraint firstItem="arA-FU-XhO" firstAttribute="centerX" secondItem="aVv-eF-OZ1" secondAttribute="centerX" id="Goe-Od-KRs"/>
                             <constraint firstItem="vQm-o0-lIW" firstAttribute="top" secondItem="arA-FU-XhO" secondAttribute="bottom" constant="20" id="QSX-FP-nu6"/>
                             <constraint firstItem="vQm-o0-lIW" firstAttribute="width" secondItem="arA-FU-XhO" secondAttribute="width" id="RLc-V8-5fm"/>
+                            <constraint firstItem="v12-Vy-bPq" firstAttribute="top" secondItem="WNo-fY-z8T" secondAttribute="bottom" constant="15" id="Wbv-cP-Y1t"/>
                             <constraint firstItem="vQm-o0-lIW" firstAttribute="centerX" secondItem="aVv-eF-OZ1" secondAttribute="centerX" id="p19-ca-lBE"/>
+                            <constraint firstItem="v12-Vy-bPq" firstAttribute="centerX" secondItem="aVv-eF-OZ1" secondAttribute="centerX" id="wUm-tf-Crz"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Ifx-sp-nMa"/>
                     </view>
@@ -105,6 +114,8 @@
                     </navigationItem>
                     <connections>
                         <outlet property="JuegoImageView" destination="arA-FU-XhO" id="qG1-Gr-YeV"/>
+                        <outlet property="agregarActualizarBoton" destination="WNo-fY-z8T" id="9ta-nK-6Lz"/>
+                        <outlet property="eliminarBoton" destination="v12-Vy-bPq" id="HEx-pV-yBn"/>
                         <outlet property="tituloTextField" destination="vQm-o0-lIW" id="Evs-yi-NE1"/>
                     </connections>
                 </viewController>
